# fprettify

./: .gitignore  README.md  Refactor.md  fprettify.py  meson.build  pyproject.toml
fortran_tests/test_results/: expected_results
fprettify/: __init__.py  _cli.py  aligner.py  cli.py  constants.py  core.py  exception.py  formatter.py  fparse_utils.py  indenter.py  log.py  meson.build  parser.py  re.py  scanner.py  utils.py
fprettify/tests/: __init__.py  fortrantests.py  meson.build  unittests.py
