py3.install_sources(
    [
        '__init__.py',
        'aligner.py',
        '_cli.py',
        'cli.py',
        'exception.py',
        'formatter.py',
        'indenter.py',
        'log.py',
        'meson.build',
        'parser.py',
        're.py',
        'scanner.py',
        'utils.py',
    ],
    subdir: 'fprettify'
)

subdir('tests')